--- a/website/assign-2.html
+++ b/website/assign-2.html
@@ -20,7 +20,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
-  <ul class=" d-none d-sm-block d-md-none navbar-nav ml-auto">
+  <ul class=" d-block d-md-none navbar-nav ml-auto">
     <li class="nav-item">
     <a class="text-center nav-link" href="#chicken">chicken</a>
     </li>
